--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <nav>
     <div class="container-menu">
       <ul>
-        <li><a href="services.html">.Servicios.</a></li>
-        <li><a href="products.html">.Productos.</a></li>
-        <li><a href="boarding.html">.Guardería.</a></li>
-        <li><a href="promotions.html">.Promociones.</a></li>
+        <li><a href="servicios.html"><b>.Servicios.</b></a></li>
+        <li><a href="productos.html"><b>.Productos.</b></a></li>
+        <li><a href="guarderia.html"><b>.Guardería.</b></a></li>
+        <li><a href="promociones.html"><b>.Promociones.</b></a></li>
       </ul>
     </div>
   </nav>
@@ -29,14 +29,14 @@
         <h2>Cuidados y educación para su perro</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorum error animi repellendus delectus, est fugiat a culpa. Qui excepturi suscipit totam mollitia consectetur quam possimus, perferendis consequatur! Praesentium, autem.</p>
         <br>
-        <a href="vercuidado">Ver más...</a>
+        <a href="cuidado.html">Ver más...</a>
         <img src="img/lobo.webp" alt="perro1">
       </article>
       <article>
         <h2>Salir de viaje con su mascota</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi fuga sapiente, maiores consectetur veritatis porro, minus nulla accusantium iusto nesciunt, laudantium nihil quisquam expedita assumenda ipsum temporibus. Ipsam, dolorem quia?</p>
         <br>
-        <a href="verviaje">Ver más...</a>
+        <a href="viaje.html">Ver más...</a>
         <img src="img/lobo2.jpg" alt="perro2">
       </article>
     </div>
