--- a/index.html
+++ b/index.html
@@ -9,37 +9,49 @@
 <body>
   <header>
     <div class="container">
-      <h1>Centro Veterinario Caninos y Felinos</h1>
-      <img src="img/logo2.png" alt="logo">
+      <logo>Centro Veterinario
+      <h2>Caninos y</h2>
+      <h3>Felinos</h3>
+    </logo>
+      <img src="img/logo2.png" alt="logo" width="200px" height="200px">
     </div>
   </header>
-  <nav>
+  <nav class="container-box">
     <div class="container-menu">
       <ul>
         <li><a href="servicios.html"><b>.Servicios.</b></a></li>
+        <hr>
         <li><a href="productos.html"><b>.Productos.</b></a></li>
+        <hr>
         <li><a href="guarderia.html"><b>.Guardería.</b></a></li>
+        <hr>
         <li><a href="promociones.html"><b>.Promociones.</b></a></li>
       </ul>
     </div>
   </nav>
-  <div class="container main-content">
+  <div class="container-main-content">
     <div class="article-container">
-      <article>
-        <h2>Cuidados y educación para su perro</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorum error animi repellendus delectus, est fugiat a culpa. Qui excepturi suscipit totam mollitia consectetur quam possimus, perferendis consequatur! Praesentium, autem.</p>
-        <br>
-        <a href="cuidado.html">Ver más...</a>
-        <img src="img/lobo.webp" alt="perro1">
-      </article>
-      <article>
+      <div class="article-text">
+          <h2>Salir de viaje con su mascota</h2>
+          <div class="box-text">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi fuga sapiente, maiores consectetur veritatis porro, minus nulla accusantium iusto nesciunt, laudantium nihil quisquam expedita assumenda ipsum temporibus. Ipsam, dolorem quia?</p>
+          <br>
+          <img src="img/lobo2.jpg" alt="perro2" width="200px" height="150px"> </div>      
+          <a href="viaje.html">Ver más...</a>
+            </div>
+    </div>
+  
+    <div class="article-container">
+    <div class="article-text">
         <h2>Salir de viaje con su mascota</h2>
+        <div class="box-text">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi fuga sapiente, maiores consectetur veritatis porro, minus nulla accusantium iusto nesciunt, laudantium nihil quisquam expedita assumenda ipsum temporibus. Ipsam, dolorem quia?</p>
         <br>
+        <img src="img/lobo2.jpg" alt="perro2" width="200px" height="150px"> </div>      
         <a href="viaje.html">Ver más...</a>
-        <img src="img/lobo2.jpg" alt="perro2">
-      </article>
+          </div>
     </div>
+    <div class="asidebar">
     <aside class="sidebar">
       <h3>Solicitar cita médica</h3>
       <form action="/submit_appointment" method="post">
@@ -65,12 +77,16 @@
       </form>
     </aside>
   </div>
+  </div>
+</div>
   <footer>
     <div class="container">
-      <p>Contáctenos</p>
-      <p>Línea gratuita 018000-00001</p>
-      <p>Correo:
-        <a href="mailto:preguntas@caninosyfelinos.com">preguntas@caninosyfelinos.com</a>
+      <p class="pie">Contáctenos
+        <br>
+        Línea gratuita 018000-00001
+        <br>
+        Correo: preguntas@caninosyfelinos.com
+      </p>
       </p>
     </div>
   </footer>
