--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   <div class="container-main-content">
     <div class="article-container">
       <div class="article-text">
-          <h2>Salir de viaje con su mascota</h2>
+          <h2>Cuidados y educación para su perro</h2>
           <div class="box-text">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi fuga sapiente, maiores consectetur veritatis porro, minus nulla accusantium iusto nesciunt, laudantium nihil quisquam expedita assumenda ipsum temporibus. Ipsam, dolorem quia?</p>
           <br>
-          <img src="img/lobo2.jpg" alt="perro2" width="200px" height="150px"> </div>      
-          <a href="viaje.html">Ver más...</a>
+          <img src="img/lobo.webp" alt="perro2" width="200px" height="150px"> </div>      
+          <a href="https://postgradoveterinaria.com/cuidados-perro-recomendaciones-basicas/">Ver más...</a>
             </div>
     </div>
   
@@ -48,7 +48,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi fuga sapiente, maiores consectetur veritatis porro, minus nulla accusantium iusto nesciunt, laudantium nihil quisquam expedita assumenda ipsum temporibus. Ipsam, dolorem quia?</p>
         <br>
         <img src="img/lobo2.jpg" alt="perro2" width="200px" height="150px"> </div>      
-        <a href="viaje.html">Ver más...</a>
+        <a href="https://www.tierragro.com/blogs/news/consejos-vacaciones-mascota">Ver más...</a>
           </div>
     </div>
     <div class="asidebar">
