--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <header>
     <div class="container">
-      <logo>Centro Veterinario
+      <logo>CENTRO VETERINARIO
       <h2>Caninos y</h2>
       <h3>Felinos</h3>
     </logo>
-      <img src="img/logo2.png" alt="logo" width="200px" height="200px">
+      <img src="img/logotipo.png" alt="logo" width="200px" height="200px">
     </div>
   </header>
   <nav class="container-box">
@@ -47,7 +47,7 @@
         <div class="box-text">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi fuga sapiente, maiores consectetur veritatis porro, minus nulla accusantium iusto nesciunt, laudantium nihil quisquam expedita assumenda ipsum temporibus. Ipsam, dolorem quia?</p>
         <br>
-        <img src="img/lobo2.jpg" alt="perro2" width="200px" height="150px"> </div>      
+        <img src="img/lobo3.jpg" alt="perro2" width="200px" height="150px"> </div>      
         <a href="https://www.tierragro.com/blogs/news/consejos-vacaciones-mascota">Ver más...</a>
           </div>
     </div>
